--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -2,6 +2,7 @@
 name = "astria-sequencer"
 version = "0.1.0"
 edition = "2021"
+rust-version = "1.70.0"
 
 [dependencies]
 astria-proto = {path = "../astria-proto"}
