proto: define account responses
this also reexports prost's Message trait for
convenience reasons.

--- a/crates/astria-sequencer-client/Cargo.toml
+++ b/crates/astria-sequencer-client/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+proto = { package = "astria-proto", path = "../astria-proto" }
 sequencer = { package = "astria-sequencer", path = "../astria-sequencer" }
 
 async-trait = { workspace = true }
