--- a/crates/astria-sequencer-client/Cargo.toml
+++ b/crates/astria-sequencer-client/Cargo.toml
@@ -12,6 +12,7 @@ borsh = { workspace = true }
 eyre = { workspace = true }
 tendermint = { workspace = true }
 tendermint-rpc = { workspace = true }
+faster-hex = "0.8.0"
 
 [features]
 http = ["tendermint-rpc/http-client"]
@@ -20,6 +21,7 @@ websocket = ["tendermint-rpc/websocket-client"]
 [dev-dependencies]
 ed25519-consensus = { workspace = true }
 hex = { workspace = true }
+hex-literal = "0.4.1"
 serde_json = { workspace = true }
 tokio = { workspace = true }
 tokio-test = "0.4.2"
