--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 astria-proto = { path = "../astria-proto" }
 
 anyhow = "1"
+matchit = "0.7.2"
 penumbra-storage = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.56.0" }
 penumbra-tower-trace = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.56.0" }
 tower = "0.4"
