--- a/crates/astria-sequencer-client/Cargo.toml
+++ b/crates/astria-sequencer-client/Cargo.toml
@@ -10,9 +10,9 @@ sequencer = { package = "astria-sequencer", path = "../astria-sequencer" }
 async-trait = { workspace = true }
 borsh = { workspace = true }
 eyre = { workspace = true }
+hex = { workspace = true }
 tendermint = { workspace = true }
 tendermint-rpc = { workspace = true }
-faster-hex = "0.8.0"
 
 [features]
 http = ["tendermint-rpc/http-client"]
@@ -20,8 +20,9 @@ websocket = ["tendermint-rpc/websocket-client"]
 
 [dev-dependencies]
 ed25519-consensus = { workspace = true }
-hex = { workspace = true }
 hex-literal = "0.4.1"
+regex = "1.9.3"
+serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 tokio = { workspace = true }
 tokio-test = "0.4.2"
