--- a/crates/astria-sequencer-types/Cargo.toml
+++ b/crates/astria-sequencer-types/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 base64-serde = "0.7.0"
 sha2 = "0.10"
+thiserror = "1.0"
 
 base64 = { workspace = true }
 eyre = { workspace = true }
