--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -16,6 +16,7 @@ hyper = "0.14.27"
 serde_path_to_error = "0.1.13"
 sha2 = "0.10"
 zeroize = { version = "1.6.0", features = ["zeroize_derive"] }
+bincode = "1.3.3"
 
 base64 = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
