--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -3,7 +3,7 @@ name = "astria-sequencer-relayer"
 version = "0.4.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
-rust-version = "1.65"
+rust-version = "1.70"
 
 [dependencies]
 base64-serde = "0.7.0"
@@ -24,7 +24,6 @@ futures = { workspace = true }
 hex = { workspace = true, features = ["serde"] }
 humantime = { workspace = true }
 hyper = { workspace = true }
-is-terminal = { workspace = true }
 prost = { workspace = true }
 reqwest = { workspace = true, features = ["json"] }
 serde = { workspace = true, features = ["derive"] }
@@ -41,6 +40,7 @@ astria-gossipnet = { path = "../astria-gossipnet" }
 astria-proto = { path = "../astria-proto" }
 astria-sequencer = { path = "../astria-sequencer" }
 astria-sequencer-types = { path = "../astria-sequencer-types" }
+telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
 
 [dev-dependencies]
 astria-celestia-jsonrpc-client = { path = "../astria-celestia-jsonrpc-client", features = [
