--- a/crates/astria-sequencer-client/Cargo.toml
+++ b/crates/astria-sequencer-client/Cargo.toml
@@ -20,7 +20,7 @@ websocket = ["tendermint-rpc/websocket-client"]
 [dev-dependencies]
 ed25519-consensus = { workspace = true }
 hex-literal = "0.4.1"
-regex = "1.9.3"
+regex = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 tokio = { workspace = true }
