Unify telemetry by replacing telemetry modules by crate (#271)
## Summary (why this PR?)

This patch replaces all bespoke telemetry modules by one central
`astria-telemetry` crate. The different tracing initializers were almost
exactly the same, with some minor differences. The `astria-telemetry`
crate ensures that tracing is initialized in the same comprehensible way
accross all services.

## Changelist

+ introduce the `astria-telemetry` crate;
+ replace all bespoke `telemetry` modules in
`astria-{sequencer,sequencer-relayer,composer,conductor}` by the new
crate;
+ update `astria-sequencer` and `astria-conductor` to read the tracing
directives from the config and the `RUST_LOG` env var (this ensures that
this patch is not a breaking change);
+ bump the msrv to `1.70.0` for all services because `astria-telemetry`
uses `std::io::IsTerminal` instead of the `is-terminal` crate;
+ bump github actions and pin the docker file to the msrv.

## Related issues

+ the config changes of `astria-conductor` and `astria-sequencer`
partially relate to https://github.com/astriaorg/astria/issues/240
+ closes #170 

## Testing

None: can't really be tested, wasn't tested before, and does not
constitute n actual code change in `astria-composer`,
`astria-sequencer-relayer` that `astria-telemetry` is a verbatim copy
of.

--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -3,7 +3,7 @@ name = "astria-sequencer-relayer"
 version = "0.4.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
-rust-version = "1.65"
+rust-version = "1.70"
 
 [dependencies]
 base64-serde = "0.7.0"
@@ -24,7 +24,6 @@ futures = { workspace = true }
 hex = { workspace = true, features = ["serde"] }
 humantime = { workspace = true }
 hyper = { workspace = true }
-is-terminal = { workspace = true }
 prost = { workspace = true }
 reqwest = { workspace = true, features = ["json"] }
 serde = { workspace = true, features = ["derive"] }
@@ -33,7 +32,6 @@ tendermint = { workspace = true, features = ["rust-crypto"] }
 tendermint-config = { workspace = true }
 tendermint-rpc = { workspace = true, features = ["http-client"] }
 tracing = { workspace = true }
-tracing-subscriber = { workspace = true, features = ["env-filter"] }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 
 astria-celestia-jsonrpc-client = { path = "../astria-celestia-jsonrpc-client" }
@@ -41,6 +39,7 @@ astria-gossipnet = { path = "../astria-gossipnet" }
 astria-proto = { path = "../astria-proto" }
 astria-sequencer = { path = "../astria-sequencer" }
 astria-sequencer-types = { path = "../astria-sequencer-types" }
+telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
 
 [dev-dependencies]
 astria-celestia-jsonrpc-client = { path = "../astria-celestia-jsonrpc-client", features = [
