--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -2,9 +2,11 @@
 name = "astria-sequencer"
 version = "0.2.0"
 edition = "2021"
+rust-version = "1.70.0"
 
 [dependencies]
 astria-proto = { path = "../astria-proto" }
+telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
 
 anyhow = "1"
 matchit = "0.7.2"
@@ -21,7 +23,6 @@ clap = { workspace = true, features = ["derive"] }
 ed25519-consensus = { workspace = true }
 futures = { workspace = true }
 hex = { workspace = true, features = ["serde"] }
-is-terminal = { workspace = true }
 prost = { workspace = true }
 rand = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
@@ -31,8 +32,3 @@ tendermint-proto = { workspace = true }
 tendermint = { workspace = true }
 tokio = { workspace = true, features = ["rt", "tracing"] }
 tracing = { workspace = true }
-tracing-subscriber = { workspace = true, features = [
-  "ansi",
-  "env-filter",
-  "json",
-] }
