--- a/crates/astria-sequencer-types/Cargo.toml
+++ b/crates/astria-sequencer-types/Cargo.toml
@@ -18,3 +18,7 @@ tracing = { workspace = true }
 
 astria-celestia-jsonrpc-client = { path = "../astria-celestia-jsonrpc-client" }
 astria-sequencer = { path = "../astria-sequencer" }
+astria-sequencer-validation = { path = "../astria-sequencer-validation" }
+
+[dev-dependencies]
+ct-merkle = { version = "0.1", features = ["serde"] }
