Handle forks 1 block long from sequencer

--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -41,6 +41,7 @@ astria-sequencer = { path = "../astria-sequencer" }
 astria-sequencer-types = { path = "../astria-sequencer-types" }
 astria-sequencer-validation = { path = "../astria-sequencer-validation" }
 telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
+smallvec = "1.11.0"
 
 [dev-dependencies]
 rand_core = { version = "0.6", features = ["getrandom"] }
