--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -38,8 +38,8 @@ astria-celestia-jsonrpc-client = { path = "../astria-celestia-jsonrpc-client" }
 astria-gossipnet = { path = "../astria-gossipnet" }
 astria-proto = { path = "../astria-proto" }
 astria-sequencer = { path = "../astria-sequencer" }
-astria-sequencer-types = { path = "../astria-sequencer-types" }
 astria-sequencer-validation = { path = "../astria-sequencer-validation" }
+sequencer-types = { package = "astria-sequencer-types", path = "../astria-sequencer-types" }
 telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
 
 [dev-dependencies]
