--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -36,8 +36,8 @@ tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 
 astria-celestia-jsonrpc-client = { path = "../astria-celestia-jsonrpc-client" }
 astria-gossipnet = { path = "../astria-gossipnet" }
-astria-proto = { path = "../astria-proto" }
 astria-sequencer-validation = { path = "../astria-sequencer-validation" }
+proto = { package = "astria-proto", path = "../astria-proto" }
 sequencer-types = { package = "astria-sequencer-types", path = "../astria-sequencer-types" }
 telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
 
