--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 rust-version = "1.70.0"
 
 [dependencies]
-astria-proto = { path = "../astria-proto" }
-astria-sequencer-validation = { path = "../astria-sequencer-validation" }
+proto = { package = "astria-proto", path = "../astria-proto" }
+sequencer-validation = { package = "astria-sequencer-validation", path = "../astria-sequencer-validation" }
 telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
 
 anyhow = "1"
