--- a/crates/astria-sequencer-client/Cargo.toml
+++ b/crates/astria-sequencer-client/Cargo.toml
@@ -23,5 +23,5 @@ regex = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 tokio = { workspace = true }
-tokio-test = "0.4.2"
+tokio-test = { workspace = true }
 wiremock = { workspace = true }
