--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -38,7 +38,7 @@ astria-celestia-jsonrpc-client = { path = "../astria-celestia-jsonrpc-client" }
 astria-gossipnet = { path = "../astria-gossipnet" }
 astria-sequencer-validation = { path = "../astria-sequencer-validation" }
 proto = { package = "astria-proto", path = "../astria-proto" }
-sequencer-types = { package = "astria-sequencer-types", path = "../astria-sequencer-types", features = [ "relayer-test" ] }
+sequencer-types = { package = "astria-sequencer-types", path = "../astria-sequencer-types" }
 telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
 smallvec = "1.11.0"
 
