set example celestia endpoint to port 26659

--- a/crates/astria-sequencer-relayer/local.env.example
+++ b/crates/astria-sequencer-relayer/local.env.example
@@ -3,9 +3,9 @@
 # serves RPCs.
 ASTRIA_SEQUENCER_RELAYER_SEQUENCER_ENDPOINT="http://127.0.0.1:26657"
 
-# Address of the celestia node. 127.0.0.1:26658 is the default socket
-# address at which celestia node servces RPCs.
-ASTRIA_SEQUENCER_RELAYER_CELESTIA_ENDPOINT="http://127.0.0.1:26658"
+# Address at which celestia node serves RPCs. While :26657 is the default port
+# that celestia node binds it clashes with cometbft.
+ASTRIA_SEQUENCER_RELAYER_CELESTIA_ENDPOINT="http://127.0.0.1:26659"
 
 # The bearer token to submit sequencer blocks as blobs to Celestia.
 # The token is obtained by running `celestia bridge auth <permissions>`
