--- a/crates/astria-sequencer-relayer/local.env.example
+++ b/crates/astria-sequencer-relayer/local.env.example
@@ -35,10 +35,9 @@ ASTRIA_SEQUENCER_RELAYER_P2P_PORT=33900
 # A list of bootnodes that sequencer relayer will use to join the gossipnet p2p network.
 # Optional: if left empty sequencer relayer will be a single node in the gossipnet,
 # waiting for peers to join it.
-ASTRIA_SEQUENCER_RELAYER_BOOTNODES=/ip4/1.2.3.4/tcp/1234
+ASTRIA_SEQUENCER_RELAYER_BOOTNODES=
 
 # The path to the libp2p private key.
-# Optional: if left empty sequencer-relayer will only join permissionless gossipnets.
 ASTRIA_SEQUENCER_RELAYER_LIBP2P_PRIVATE_KEY=/home/user/.gossipnet/libp2p.priv
 
 # A list of filter directives of the form target[span{field=value}]=level.
