--- a/crates/astria-sequencer/local.env.example
+++ b/crates/astria-sequencer/local.env.example
@@ -1,11 +1,8 @@
 # Log level for the sequencer
-ASTRIA_COMPOSER_LOG="astria_composer=info"
+ASTRIA_SEQUENCER_LOG="astria_composer=info"
 
-# Address of the API server
-ASTRIA_SEQUENCER_GENESIS_FILE="test-genesis.json"
-
-# Address of the RPC server for the sequencer chain
+# Address of the RPC server for the sequencer ABCI application
 ASTRIA_SEQUENCER_LISTEN_ADDR="http://127.0.0.1:26658"
 
 # Path to rocksdb
-ASTRIA_SEQUENCER_DB_FILEPATH="../"
+ASTRIA_SEQUENCER_DATA_DIR="../"
