--- a/crates/astria-sequencer/justfile
+++ b/crates/astria-sequencer/justfile
@@ -1,5 +1,3 @@
-alias r := run
-
 default:
   @just --list
 
@@ -13,21 +11,13 @@ copy-env type=default_env:
 run:
   cargo run
 
-build-penumbra:
-  sudo pacman -S gcc11 gcc12-libs && CC=/usr/bin/gcc-13 CXX=/usr/bin/c++-12 cargo build
-
-install-cometbft:
-  git clone https://github.com/astriaorg/cometbft
-  cd cometbft
-  export GOPATH=~/go
-  make install
 
 run-cometbft:
   cometbft init
   sed -i'.bak' 's/timeout_commit = "0s"/timeout_commit = "15s"/g' ~/.cometbft/config/config.toml
   cometbft node
 
-run-testnet: install-cometbft
+run-testnet: 
   cargo build
   ${OUT_DIR} ${NUM_VALIDATORS} ./scripts/testnet.sh
 
