--- a/crates/astria-sequencer/local.env.example
+++ b/crates/astria-sequencer/local.env.example
@@ -2,7 +2,7 @@
 ASTRIA_SEQUENCER_LOG="astria_composer=info"
 
 # Address of the RPC server for the sequencer ABCI application
-ASTRIA_SEQUENCER_LISTEN_ADDR="http://127.0.0.1:26658"
+ASTRIA_SEQUENCER_LISTEN_ADDR="127.0.0.1:26658"
 
 # Path to rocksdb
 ASTRIA_SEQUENCER_DATA_DIR="../"
