--- a/crates/astria-sequencer/local.env.example
+++ b/crates/astria-sequencer/local.env.example
@@ -1,7 +1,9 @@
 # Log level for the sequencer
 ASTRIA_SEQUENCER_LOG="astria_composer=info"
 
-# Address of the RPC server for the sequencer ABCI application
+# Socket address to listen for ABCI requests from cometbft.
+# This address corresponds to the `--proxy_app "tcp://<ASTRIA_SEQUENCER_LISTEN_ADDR>"`,
+# where `tcp://127.0.0.1:26658` is comebft's default.
 ASTRIA_SEQUENCER_LISTEN_ADDR="127.0.0.1:26658"
 
 # Path to rocksdb
