fix: addressing SuferFluffy second review comments

--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -35,4 +35,6 @@ tracing = { workspace = true }
 figment = { workspace = true, features = ["env"] }
 
 [dev-dependencies]
+once_cell = { workspace = true }
 figment = { workspace = true, features = ["test"] }
+regex = { workspace = true }
