--- a/crates/astria-sequencer/local.env.example
+++ b/crates/astria-sequencer/local.env.example
@@ -1,8 +1,8 @@
 # Log level for the sequencer
-ASTRIA_SEQUENCER_LOG="astria_composer=info"
+ASTRIA_SEQUENCER_LOG="astria_sequencer=info"
 
 # Address of the RPC server for the sequencer ABCI application
 ASTRIA_SEQUENCER_LISTEN_ADDR="http://127.0.0.1:26658"
 
 # Path to rocksdb
-ASTRIA_SEQUENCER_DATA_DIR="../"
+ASTRIA_SEQUENCER_DB_FILEPATH="../db"
