--- a/crates/astria-sequencer/justfile
+++ b/crates/astria-sequencer/justfile
@@ -14,6 +14,7 @@ run:
 
 run-cometbft:
   cometbft init
+  ../../target/debug/astria-sequencer-utils --genesis-app-state-file=test-genesis-app-state.json --destination-genesis-file=$HOME/.cometbft/config/genesis.json
   sed -i'.bak' 's/timeout_commit = "0s"/timeout_commit = "15s"/g' ~/.cometbft/config/config.toml
   cometbft node
 
