--- a/crates/astria-sequencer/local.env.example
+++ b/crates/astria-sequencer/local.env.example
@@ -7,4 +7,4 @@ ASTRIA_SEQUENCER_LOG="astria_sequencer=info"
 ASTRIA_SEQUENCER_LISTEN_ADDR="127.0.0.1:26658"
 
 # Path to rocksdb
-ASTRIA_SEQUENCER_DB_FILEPATH="../db"
+ASTRIA_SEQUENCER_DB_FILEPATH="/tmp/astria_db"
