--- a/crates/astria-sequencer-relayer/local.env.example
+++ b/crates/astria-sequencer-relayer/local.env.example
@@ -1,7 +1,7 @@
 # Address of sequencer/cometbft/tendermint to request new blocks.
 # 127.0.0.1:26657 is the default socket address at which cometbft
 # serves RPCs.
-ASTRIA_SEQUENCER_RELAYER_SEQUENCER_ENDPOINT="http://127.0.0.1:26657"
+ASTRIA_SEQUENCER_RELAYER_SEQUENCER_ENDPOINT="ws://127.0.0.1:26657"
 
 # Address at which celestia node serves RPCs. While :26657 is the default port
 # that celestia node binds it clashes with cometbft.
