--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -48,6 +48,7 @@ rand_core = { version = "0.6", features = ["getrandom"] }
 
 figment = { workspace = true, features = ["test"] }
 jsonrpsee = { workspace = true, features = ["server"] }
+jsonrpsee-core = "0.20"
 once_cell = { workspace = true }
 regex = { workspace = true }
 tempfile = { workspace = true }
