add unit test for SequencerBlockData::from_tendermint_block

--- a/crates/astria-sequencer-types/Cargo.toml
+++ b/crates/astria-sequencer-types/Cargo.toml
@@ -23,3 +23,5 @@ sequencer-validation = { package = "astria-sequencer-validation", path = "../ast
 
 [dev-dependencies]
 ct-merkle = { version = "0.1", features = ["serde"] }
+ed25519-consensus = { workspace = true }
+rand = { workspace = true }
