--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -6,10 +6,9 @@ rust-version = "1.70.0"
 
 [dependencies]
 proto = { package = "astria-proto", path = "../astria-proto" }
-astria-config-derive = { path = "../astria-config-derive" }
 astria-utils = { path = "../astria-utils", features = [
   "config",
-  "config-tests",
+  "derive",
 ] }
 sequencer-validation = { package = "astria-sequencer-validation", path = "../astria-sequencer-validation" }
 telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
@@ -44,3 +43,4 @@ figment = { workspace = true, features = ["env"] }
 once_cell = { workspace = true }
 figment = { workspace = true, features = ["test"] }
 regex = { workspace = true }
+astria-utils ={ path = "../astria-utils", features = ["config-tests"]}
