--- a/crates/astria-sequencer-relayer/Cargo.toml
+++ b/crates/astria-sequencer-relayer/Cargo.toml
@@ -33,7 +33,7 @@ tendermint-rpc = { workspace = true, features = ["http-client"] }
 tracing = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 
-astria-utils = { path = "../astria-utils", features = ["config", "derive"] }
+astria-config = { path = "../astria-config", features = ["config", "derive"] }
 astria-celestia-jsonrpc-client = { path = "../astria-celestia-jsonrpc-client" }
 astria-sequencer-validation = { path = "../astria-sequencer-validation" }
 proto = { package = "astria-proto", path = "../astria-proto" }
@@ -53,4 +53,4 @@ regex = { workspace = true }
 tempfile = { workspace = true }
 tokio = { workspace = true, features = ["test-util"] }
 wiremock = { workspace = true }
-astria-utils = { path = "../astria-utils", features = ["config-tests"] }
+astria-config = { path = "../astria-config", features = ["config-tests"] }
