--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -6,10 +6,7 @@ rust-version = "1.70.0"
 
 [dependencies]
 proto = { package = "astria-proto", path = "../astria-proto" }
-astria-utils = { path = "../astria-utils", features = [
-  "config",
-  "derive",
-] }
+astria-config = { path = "../astria-config", features = ["config", "derive"] }
 sequencer-validation = { package = "astria-sequencer-validation", path = "../astria-sequencer-validation" }
 telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
 sequencer_types = { package = "astria-sequencer-types", path = "../astria-sequencer-types" }
@@ -43,4 +40,4 @@ figment = { workspace = true, features = ["env"] }
 once_cell = { workspace = true }
 figment = { workspace = true, features = ["test"] }
 regex = { workspace = true }
-astria-utils ={ path = "../astria-utils", features = ["config-tests"]}
+astria-config = { path = "../astria-config", features = ["config-tests"] }
