--- a/crates/astria-sequencer/local.env.example
+++ b/crates/astria-sequencer/local.env.example
@@ -8,3 +8,7 @@ ASTRIA_SEQUENCER_LISTEN_ADDR="127.0.0.1:26658"
 
 # Path to rocksdb
 ASTRIA_SEQUENCER_DB_FILEPATH="/tmp/astria_db"
+
+# Set to true to enable the mint component
+# Only used if the "mint" feature is enabled
+ASTRIA_SEQUENCER_ENABLE_MINT=false
