--- a/crates/astria-sequencer/Cargo.toml
+++ b/crates/astria-sequencer/Cargo.toml
@@ -37,4 +37,6 @@ tracing = { workspace = true }
 figment = { workspace = true, features = ["env"] }
 
 [dev-dependencies]
-config = { package = "astria-config", path = "../astria-config", features = ["tests"] }
+config = { package = "astria-config", path = "../astria-config", features = [
+  "tests",
+] }
